--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST api for scheduler app.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --runInBand",
     "start": "node app.js",
     "dev": "nodemon -r dotenv/config app.js"
   },
@@ -12,26 +12,20 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "chai": "^4.2.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
-    "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^7.1.2",
     "mongoose": "^5.9.7",
-    "multer": "^1.4.2",
     "nodemon": "^2.0.3",
-    "sinon": "^9.0.2",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.1.5",
     "dotenv": "^8.2.0",
     "supertest": "^4.0.2"
   }
