--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,5 @@ jobs:
           npm install
           npm test
         env:
-          DB_TEST_NAME: ${{ secrets.DB_TEST_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_TEST_URL: ${{ secrets.DB_TEST_URL }}
           CI: true
