--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,5 @@
 NODE_ENV = development
 PORT = 8080
 
-DB_DEV_NAME="mongoDB development database url"
-
-DB_NAME="mongoDB database name"
-DB_USER="mongoDB database username"
-DB_PASSWORD="mongoDB database password"
-
-DB_TEST_URL = "mongoDB test database url"
+DB_DEV_URL = "<your mongodb development database url>"
+DB_TEST_URL = "<your mongodb test database url>"
