--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "node app.js",
     "dev": "nodemon -r dotenv/config app.js"
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "author": "Jérémie Néhlil",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.1",
     "cors": "^2.8.5",
@@ -19,16 +23,23 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
-    "fs-extra": "^9.0.1",
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.3",
-    "uuid": "^7.0.3"
+    "uuid": "^7.0.3",
+    "dotenv": "^8.2.0",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "eslint": "^7.3.1",
-    "supertest": "^4.0.2"
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-security": "^1.4.0",
+    "fs-extra": "^9.0.1",
+    "prettier": "^2.1.2"
   }
 }
